--- a/style.css
+++ b/style.css
@@ -1,14 +1,30 @@
  /* fonts */
  @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap');
 
-  /* common style */
+  /* common style or utilities */
 body{
     font-family: 'Poppins', sans-serif;
-    background-color: ##E5E5E5;
+    background-color: #F3F1FF;
+}
+main{
+    display: flex;
+    justify-content: center;
+}
+.container{
+    background-color: #FFFFFF;
+    width: 870px;
+    padding: 30px;
+    
+}
+.section-title{
+    color: #562EFF;
+    font-size: 24px;
+    margin-top: 3px;
 }
 .players{
     display: grid;
     grid-template: repeat(2,1fr)/repeat(3,1fr);
+    grid-row-gap: 30px;
 }
 .player{
     display: flex;
@@ -18,4 +34,8 @@ body{
 .player img{
     width: 56px;
     height: 56px;
+}
+.player-name{
+    padding-left: 16px;
+    font-size: 18px;
 }
