--- a/style.css
+++ b/style.css
@@ -1,41 +1,91 @@
- /* fonts */
- @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap');
+/* fonts */
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap");
 
-  /* common style or utilities */
-body{
-    font-family: 'Poppins', sans-serif;
-    background-color: #F3F1FF;
+/* common style or utilities */
+body {
+    font-family: "Poppins", sans-serif;
+    background-color: #f3f1ff;
 }
-main{
+main {
     display: flex;
     justify-content: center;
+    flex-direction: column;
+    align-items: center;
 }
-.container{
-    background-color: #FFFFFF;
+.container {
+    background-color: #ffffff;
     width: 870px;
     padding: 30px;
-    
+    margin-top: 21px;
 }
-.section-title{
-    color: #562EFF;
+hr {
+    border: 1px solid #d1d1d1;
+    margin-bottom: 29px;
+}
+.section-title {
+    color: #562eff;
     font-size: 24px;
     margin-top: 3px;
 }
-.players{
+.players {
     display: grid;
-    grid-template: repeat(2,1fr)/repeat(3,1fr);
+    grid-template: repeat(2, 1fr) / repeat(3, 1fr);
     grid-row-gap: 30px;
 }
-.player{
+.top-players {
+    margin-bottom: 30px;
+}
+.player {
     display: flex;
     align-items: center;
-
 }
-.player img{
+.player img {
     width: 56px;
     height: 56px;
 }
-.player-name{
+.player-name {
     padding-left: 16px;
     font-size: 18px;
+}
+
+/* top player style end */
+
+/* Top Blog section style */
+
+.blogs {
+    display: grid;
+    grid-template: repeat(2, 1fr) / repeat(2, 1fr);
+    row-gap: 26px;
+}
+.blog .thumnail img {
+    width: 177px;
+    height: 117px;
+}
+.blog {
+    display: flex;
+    /* align-items: center; */
+}
+.blog-info {
+    margin-left: 16px;
+}
+.blog-title {
+    font-size: 20px;
+    margin: 0;
+}
+.blog-author {
+    color: #9f9f9f;
+    font-size: 16px;
+    margin-top: 6px;
+}
+.blog-author a {
+    text-decoration: none;
+    color: #562eff;
+    font-size: 16px;
+}
+
+/* latest courses styles */
+
+.course .course-banner img {
+    width: 224px;
+    height: 104px;
 }
