media quries top player

--- a/style.css
+++ b/style.css
@@ -29,7 +29,10 @@ hr {
 }
 .players {
     display: grid;
-    grid-template: repeat(2, 1fr) / repeat(3, 1fr);
+    /* grid-template: repeat(2, 1fr) / repeat(3, 1fr); */
+    grid-template-rows: repeat(2,1fr);
+    grid-template-columns: repeat(3,1fr );
+
     grid-row-gap: 30px;
 }
 .top-players {
@@ -85,43 +88,59 @@ hr {
 
 /* latest courses styles */
 
-.courses{
+.courses {
     display: grid;
-    grid-template-columns: repeat(3,1fr);
+    grid-template-columns: repeat(3, 1fr);
     column-gap: 24px;
 }
 .course .course-banner img {
     width: 224px;
     height: 104px;
 }
-.course-title{
+.course-title {
     font-size: 20px;
-    color: #1E1E1E;
+    color: #1e1e1e;
 }
-.course-author{
+.course-author {
     font-size: 14px;
-    color: #ED6B4F;
+    color: #ed6b4f;
 }
-.course-info{
+.course-info {
     display: flex;
     align-items: center;
     justify-content: space-between;
-
 }
 
-.fa-start{
+.fa-start {
     font-size: 12px;
 }
-.fa-star.filled{
-    color: #FFC014;
-    
+.fa-star.filled {
+    color: #ffc014;
 }
-.fa-star.empty{
-    color: #AEAEAE;
+.fa-star.empty {
+    color: #aeaeae;
 }
 
-.course-duration{
-    color: #FF4A60;
+.course-duration {
+    color: #ff4a60;
     background-color: #ff4a5f3a;
     border-radius: 20px 20px;
+}
+
+/* Media Quries */
+
+/* Mobile Devices */
+
+@media only screen and (max-width: 688px) {
+    .container{
+        width: 100%;
+    }
+    .players {
+        background-color: dodgerblue;
+        grid-template-columns: repeat(1, 1fr );
+       
+    }
+    .blogs,.courses{
+        display: none;
+    }
 }
