--- a/style.css
+++ b/style.css
@@ -153,7 +153,7 @@ hr {
     }
     .blog,.course{
         flex-direction: column;
-        
+        align-items: center;
     }
     
     /* courses  */
